Update ngrx exercise

--- a/ngrx/ngrx.html
+++ b/ngrx/ngrx.html
@@ -151,7 +151,7 @@
 <ul>
 <li class="fragment"><a href="https://dashboard.nbshare.io/api/v1/apps/reddit">https://dashboard.nbshare.io/api/v1/apps/reddit</a></li>
 <li class="fragment"><code>npm i rxjs</code></li>
-<li class="fragment">לפתוח בקשת GET אל ה-API פעם ב-200 מילי-שניות</li>
+<li class="fragment">לפתוח בקשת GET אל ה-API פעם ב2-שניות ל-10 שניות</li>
 <li class="fragment">לפרסר את המידע</li>
 <li class="fragment">להסיר את המידע שהוא עם הערות מתחת ל-3, <code>"sentiment"</code> שהוא לא <code>"Bullish"</code> ו-<code>"sentiment_score"</code> מעל 0.3. אם יש מתחת ל-3 תוצאות, לא להוציא ל-Observable</li>
 <li class="fragment">להציג את ה-3 הראשונים</li>
