--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <li class="fragment"><a href="./advanced-react/advanced-react.html">Advanced React</a></li>
 <li class="fragment"><a href="./ngrx/ngrx.html">ngRx</a></li>
 <li class="fragment">react-redux</li>
-<li class="fragment">Advanced CSS - Coming soon!</li>
+<li class="fragment"><a href="./advanced-css/advanced-css.html">Advanced CSS</a></li>
 <li class="fragment">Tools to help write better code - Coming soon!</li>
 </ol>
 <p>Note: All of the presentations are in Hebrew.</p>
