Add web dev best practices

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <li class="fragment"><a href="./ngrx/ngrx.html">ngRx</a></li>
 <li class="fragment">react-redux</li>
 <li class="fragment"><a href="./advanced-css/advanced-css.html">Advanced CSS</a></li>
-<li class="fragment">Tools to help write better code - Coming soon!</li>
+<li class="fragment"><a href="./web-dev-best-practices/web-dev-best-practices.html">Web dev best practices</a></li>
 </ol>
 <p>Note: All of the presentations are in Hebrew.</p>
 </section>
